--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <h2>Available Downloads:</h2>
             <ul>
-                <li><a href="example_file_1.pdf" download>Example File 1 (PDF)</a></li>
+                <li><a href=".pdf" download>Example File 1 (PDF)</a></li>
                 <li><a href="example_file_2.zip" download>Example File 2 (ZIP)</a></li>
                 <!-- Add more files as needed -->
             </ul"https://c4.wallpaperflare.com/wallpaper/365/244/884/uchiha-itachi-naruto-shippuuden-anbu-silhouette-wallpaper-preview.jpg">
